--- a/web/src/styles/components/Navbar.scss
+++ b/web/src/styles/components/Navbar.scss
@@ -134,8 +134,8 @@
     justify-content: center;
     align-items: center;
     fill: var(--white);
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     box-shadow: 0 4px 4px #4f4f4f;
     background-color: rgba(77, 77, 77, 0.33);
     border: 1px solid var(--additional-color-3);
@@ -143,6 +143,11 @@
     cursor: pointer;
     z-index: 21;
     transition: 0.3s;
+
+    & svg {
+        width: 70%;
+        height: 70%;
+    }
 
     &.active {
         fill: var(--black);
@@ -183,9 +188,34 @@
         }
     }
 
-    #navbar,
-    .navbar-first-part {
-        gap: 25px;
+    #navbar {
+        padding: 0;
+        gap: 20px;
+    }
+
+    .navbar-first-part,
+    .navbar-buttons-last,
+    .navbar-buttons {
+        width: 100%;
+        gap: 20px;
+
+        & p {
+            width: 100%;
+            height: 50px;
+            display: flex;
+            text-align: start;
+            align-items: center;
+            font-size: 25px;
+            margin: 0;
+            padding: 0 0 0 50px;
+            box-sizing: border-box;
+            border-bottom: 2px solid rgb(from var(--white) r g b / 50%);
+            transition: 0.3s;
+
+            &:active {
+                border-color: var(--white);
+            }
+        }
     }
 }
 
@@ -216,12 +246,6 @@
     }
 }
 
-@media (min-width: 992px) and (max-width: 1199px) {
-    #navbar {
-        padding: 10px 35px;
-    }
-}
-
 @media (min-width: 768px) and (max-width: 991px) {
 }
 
@@ -234,6 +258,7 @@
 @media (max-width: 480px) {
     #navbar {
         padding: 0;
+        gap: 20px;
     }
 }
 
