--- a/web/src/styles/components/pages/main/FAQS.scss
+++ b/web/src/styles/components/pages/main/FAQS.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     padding-top: 125px;
+    padding-bottom: 125px;
     box-sizing: border-box;
 }
 
