--- a/web/src/styles/components/pages/main/UserOfferBlock.scss
+++ b/web/src/styles/components/pages/main/UserOfferBlock.scss
@@ -28,16 +28,7 @@
     }
 }
 
-@media (min-width: 651px) and (max-width: 767px) {
-    .user-offer-header {
-        width: 85%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-@media (min-width: 481px) and (max-width: 650px) {
+@media (max-width: 767px) {
     .user-offer-header {
         width: 85%;
         display: flex;
