--- a/web/src/styles/components/UI/Button.scss
+++ b/web/src/styles/components/UI/Button.scss
@@ -13,6 +13,16 @@
     background: none;
     border: none;
 
+    &:active {
+        & .button-foreground {
+            transform: translate(-2px, -2px);
+        }
+
+        & .button-background {
+            transform: translate(12px, 12px);
+        }
+    }
+
     &-foreground {
         position: absolute;
         width: 100%;
@@ -47,30 +57,6 @@
     }
 }
 
-@media (min-width: 1199px) {
-    .button:hover {
-        & .button-foreground {
-            transform: translate(-2px, -2px);
-        }
-
-        & .button-background {
-            transform: translate(12px, 12px);
-        }
-    }
-}
-
-@media (max-width: 1198px) {
-    .button:active {
-        & .button-foreground {
-            transform: translate(-2px, -2px);
-        }
-
-        & .button-background {
-            transform: translate(12px, 12px);
-        }
-    }
-}
-
 @media (max-width: 480px) {
     .button {
         height: 35px;
@@ -84,5 +70,17 @@
 @media (max-width: 300px) {
     .button-foreground {
         font-size: 15px;
+    }
+}
+
+@media (hover: hover) {
+    .button:hover {
+        & .button-foreground {
+            transform: translate(-2px, -2px);
+        }
+
+        & .button-background {
+            transform: translate(12px, 12px);
+        }
     }
 }
