--- a/web/src/styles/pages/MakeOrder.scss
+++ b/web/src/styles/pages/MakeOrder.scss
@@ -172,7 +172,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
 
     & p {
         margin: 0;
