--- a/web/src/styles/components/UI/Offer.scss
+++ b/web/src/styles/components/UI/Offer.scss
@@ -29,9 +29,8 @@
     );
 
     & img {
-        width: 100%;
-        height: 100%;
-        border-radius: 100%;
+        width: 80%;
+        height: 80%;
     }
 }
 
@@ -41,12 +40,11 @@
     align-items: center;
     flex-direction: column;
 
-    & .big-text {
+    & .mid-text {
         margin: 0;
         max-width: 100%;
         text-align: center;
         overflow-wrap: anywhere;
-        font-size: 45px;
     }
 
     & .small-text {
@@ -67,11 +65,5 @@
     .offer-icon {
         width: 50px;
         height: 50px;
-    }
-}
-
-@media (max-width: 480px) {
-    .offer-block-text .big-text {
-        font-size: 30px;
     }
 }
