--- a/web/src/styles/Default.scss
+++ b/web/src/styles/Default.scss
@@ -226,6 +226,39 @@ body,
     }
 }
 
+@keyframes scalingAnimation {
+    0% {
+        scale: 100%;
+    }
+
+    50% {
+        scale: 120%;
+    }
+
+    100% {
+        scale: 100%;
+    }
+}
+
+.initial-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--background-color);
+    cursor: pointer;
+    user-select: none;
+    z-index: 101;
+
+    & p {
+        animation: scalingAnimation 3s infinite;
+    }
+}
+
 input[type="date"] {
     min-height: 35px;
     color: var(--white);
