--- a/web/src/styles/components/UI/Offer.scss
+++ b/web/src/styles/components/UI/Offer.scss
@@ -27,6 +27,7 @@
         rgba(255, 255, 255, 0),
         var(--additional-color-2)
     );
+    overflow: hidden;
 
     & img {
         width: 80%;
