--- a/web/src/styles/Default.scss
+++ b/web/src/styles/Default.scss
@@ -245,7 +245,7 @@ body,
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -344,21 +344,16 @@ textarea {
     z-index: 0;
 }
 
+p {
+    margin: 0;
+}
+
 @media (max-width: 1199px) {
     .codesynth-text::after {
         position: absolute;
         display: none;
         opacity: 0;
         content: "";
-    }
-
-    #cursor-seeker {
-        display: none;
-        opacity: 0;
-        width: 0;
-        height: 0;
-        filter: none;
-        -webkit-filter: none;
     }
 }
 
