Fixed some bugs. Updated fields and some methods. Made some typization.

--- a/web/src/styles/components/Navbar.scss
+++ b/web/src/styles/components/Navbar.scss
@@ -165,6 +165,7 @@
         &.active {
             display: flex;
             height: 100vh;
+            top: 0 !important;
             bottom: 0;
             justify-content: center;
 
