Added projects loader. Some code refactoring

--- a/web/src/styles/components/pages/main/PortfolioBlock.scss
+++ b/web/src/styles/components/pages/main/PortfolioBlock.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     padding-top: 50px;
     box-sizing: border-box;
+    gap: 20px;
 }
 
 .projects-text {
@@ -22,7 +23,6 @@
     width: 75%;
     display: flex;
     justify-content: flex-end;
-    padding: 20px 0;
 }
 
 .drop-down {
