Changed overflow-wrap normal to break-work

--- a/web/src/styles/components/UI/Service.scss
+++ b/web/src/styles/components/UI/Service.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    overflow-wrap: normal;
+    overflow-wrap: break-word;
     border-width: 1px;
     border-style: solid;
     border-image: linear-gradient(
