--- a/web/src/styles/components/pages/main/OurServicesContent.scss
+++ b/web/src/styles/components/pages/main/OurServicesContent.scss
@@ -22,7 +22,7 @@
     position: sticky;
     top: 0;
     width: 500px;
-    height: 680px;
+    height: 40%;
     max-height: 40%;
     display: flex;
     flex-direction: column;
