--- a/web/src/styles/components/pages/main/WhatIsBlock.scss
+++ b/web/src/styles/components/pages/main/WhatIsBlock.scss
@@ -6,16 +6,16 @@
     text-align: center;
     gap: 20px;
 
+    &-buttons {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 50px;
+    }
+
     & p {
         margin: 0;
     }
-}
-
-.what-is-buttons {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 50px;
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -24,46 +24,19 @@
     }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (max-width: 991px) {
     .what-is {
         width: 90%;
-    }
 
-    .what-is-buttons {
-        flex-direction: column;
-        gap: 20px;
-    }
-}
-
-@media (min-width: 651px) and (max-width: 767px) {
-    .what-is {
-        width: 90%;
-    }
-
-    .what-is-buttons {
-        flex-direction: column;
-        gap: 20px;
-    }
-}
-
-@media (min-width: 481px) and (max-width: 650px) {
-    .what-is {
-        width: 90%;
-    }
-
-    .what-is-buttons {
-        flex-direction: column;
-        gap: 20px;
+        &-buttons {
+            flex-direction: column;
+            gap: 20px;
+        }
     }
 }
 
 @media (max-width: 480px) {
-    .what-is {
-        width: 90%;
-    }
-
     .what-is-buttons {
-        flex-direction: column;
-        gap: 20px;
+        width: 100%;
     }
 }
