--- a/web/src/styles/components/pages/main/FAQS.scss
+++ b/web/src/styles/components/pages/main/FAQS.scss
@@ -1,45 +1,35 @@
-.questions-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding-top: 125px;
-    padding-bottom: 125px;
-    box-sizing: border-box;
-}
+.questions {
+    &-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding-top: 125px;
+        padding-bottom: 125px;
+        box-sizing: border-box;
+    }
 
-.questions-header {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 40px;
+    &-header {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 40px;
 
-    & p {
-        margin: 0;
+        & p {
+            margin: 0;
+        }
+    }
+
+    &-block {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
     }
 }
 
-.questions-block {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-    .questions-container {
-        width: 90%;
-    }
-}
-
-@media (min-width: 651px) and (max-width: 767px) {
-    .questions-container {
-        width: 90%;
-    }
-}
-
-@media (min-width: 481px) and (max-width: 650px) {
+@media (max-width: 991px) {
     .questions-container {
         width: 90%;
     }
@@ -47,7 +37,6 @@
 
 @media (max-width: 480px) {
     .questions-container {
-        width: 90%;
         padding-top: 80px;
     }
 }
