--- a/web/src/styles/components/pages/main/OurStackBlock.scss
+++ b/web/src/styles/components/pages/main/OurStackBlock.scss
@@ -1,22 +1,24 @@
-.our-stack-block {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 50px;
-}
+.our-stack {
+    &-block {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+    }
 
-.our-stack-title p {
-    margin: 0;
-    text-align: center;
-}
+    &-content {
+        display: flex;
+        gap: 100px;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 80%;
+    }
 
-.our-stack-content {
-    display: flex;
-    gap: 100px;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 80%;
+    &-title p {
+        margin: 0;
+        text-align: center;
+    }
 }
 
 @media (max-width: 991px) {
